--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 					<h2>Contact Us</h2>
 
-					<form action="https://formsubmit.co/info@brookridgemedia.com" method="POST">
+					<form action="https://formsubmit.co/el/ruwogo" method="POST">
 						<div class="row gtr-50 gtr-uniform">
 							<div class="col-8 col-12-mobilep">
 								<input type="email" name="email" id="email" placeholder="Email Address" />
