--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 						<h2>Contact Us</h2>
 					</header>
 					<div class="box">
-						<form action="https://formsubmit.co/info@brookridgemedia.com" method="POST">
+						<form action="https://formsubmit.co/el/ruwogo" method="POST">
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-6 col-12-mobilep">
 									<input type="text" name="name" id="name" value="" placeholder="Name" />
