--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 
 					<h2>Contact Us</h2>
 
-					<form action="https://formsubmit.co/el/ruwogo" method="POST">
+					<form action="https://formsubmit.co/62c5b1d2a3b0cc7a6839bf81089cd1d7" method="POST">
 						<div class="row gtr-50 gtr-uniform">
 							<div class="col-8 col-12-mobilep">
-								<input type="email" name="email" id="email" placeholder="Email Address" />
+								<input type="email" name="email" id="email" placeholder="Email Address" required/>
 							</div>
 							<div class="col-4 col-12-mobilep">
 								<input type="submit" value="Sign Up" class="fit" />
