--- a/contact.html
+++ b/contact.html
@@ -37,19 +37,19 @@
 						<h2>Contact Us</h2>
 					</header>
 					<div class="box">
-						<form action="https://formsubmit.co/el/ruwogo" method="POST">
+						<form action="https://formsubmit.co/62c5b1d2a3b0cc7a6839bf81089cd1d7" method="POST">
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-6 col-12-mobilep">
-									<input type="text" name="name" id="name" value="" placeholder="Name" />
+									<input type="text" name="name" id="name" value="" placeholder="Name" required/>
 								</div>
 								<div class="col-6 col-12-mobilep">
-									<input type="email" name="email" id="email" value="" placeholder="Email" />
+									<input type="email" name="email" id="email" value="" placeholder="Email" required/>
 								</div>
 								<div class="col-12">
-									<input type="text" name="subject" id="subject" value="" placeholder="Subject" />
+									<input type="text" name="subject" id="subject" value="" placeholder="Subject" required/>
 								</div>
 								<div class="col-12">
-									<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+									<textarea name="message" id="message" placeholder="Enter your message" rows="6" required></textarea>
 								</div>
 								<div class="col-12">
 									<ul class="actions special">
