--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 								<h3>We want our clients to grow their busines.</h3>
 								<p>Our success is based off of how successful our clients are. We don't look at the quantity of clients but rather the quality of their improvement.</p>
 								<ul class="actions special">
-									<li><a href="#" class="button alt">Learn More</a></li>
+									<li><a href="about.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
@@ -96,7 +96,7 @@
 								<h3>We value interpersonal connections with our clients.</h3>
 								<p>The best thing we can do is provide a sense of community in the way that we treat them. We want everyone to feel at home when working with us. </p>
 								<ul class="actions special">
-									<li><a href="#" class="button alt">Learn More</a></li>
+									<li><a href="about.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
