--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<header class="major">
 							<h2>Reach markets outside of your location
 							<br /></h2>
-							<p>Digital marketing with the use of social media and online ads could allow your busines to expand.</p>
+							<p>Digital marketing with the use of social media and online ads could allow your business to expand.</p>
 						</header>
 						<span class="image featured"><img src="images/dacrew.png" alt="" /></span>
 					</section>
@@ -81,7 +81,7 @@
 
 							<section class="box special">
 								<span class="image featured"><img src="images/people.jpg" alt="" /></span>
-								<h3>We want our clients to grow their busines.</h3>
+								<h3>We want our clients to grow their business.</h3>
 								<p>Our success is based off of how successful our clients are. We don't look at the quantity of clients but rather the quality of their improvement.</p>
 								<ul class="actions special">
 									<li><a href="about.html" class="button alt">Learn More</a></li>
